# end_to_end_refund_agent

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy.yml  deploy_frontend.yml  terraform-apply.yml
backend/: .dockerignore  Dockerfile  README.md  agent.py  call_agent.py  chat_session.py  chunker.py  constants.py  db_models.py  guardrails.py  main.py  prompts.py  pyproject.toml  requirements.txt  schema.py  seed_data.py  setup.py  tools.py  utility.py
backend/knowledge_base/: Refund_Knowledge_Base.md
frontend/: .env  Dockerfile  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatMessage.tsx  ChatPanel.tsx  SessionSidebar.tsx
frontend/lib/: api.ts
frontend/types/: index.ts
terraform/: main.tf  outputs.tf  variables.tf
