[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beanie[srv]>=2.1.0",
    "fastapi>=0.136.1",
    "google-auth>=2.53.0",
    "langchain-text-splitters>=1.1.2",
    "langfuse>=4.6.1",
    "motor[srv]>=3.7.1",
    "nest-asyncio>=1.6.0",
    "openai-agents>=0.16.1",
    "openinference-instrumentation-openai-agents>=1.4.3",
    "pinecone>=9.0.0",
    "pymongo>=4.17.0",
    "pytest>=9.0.3",
    "redis>=7.4.0",
    "uvicorn>=0.46.0",
]
